Updated by task 'AUTO_TM_MT_1701806818687'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/2e5bc2ab4757c470c06b6184184abf8c5e90e89e

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -2,16 +2,16 @@
 title: Notas de versão da Adobe Experience Platform de julho de 2022
 description: As notas de versão de julho de 2022 da Adobe Experience Platform.
 exl-id: e34751dc-3a83-4b34-b5f4-0379abaaf177
-source-git-commit: e300e57df998836a8c388511b446e90499185705
+source-git-commit: d23f1cc9dd0155aceae78bf938d35463e9c38181
 workflow-type: tm+mt
-source-wordcount: '2378'
-ht-degree: 28%
+source-wordcount: '2234'
+ht-degree: 26%
 
 ---
 
 # Notas de versão da Adobe Experience Platform
 
-**Data de lançamento: 27 de julho de 2022**
+**Data de lançamento: quinta-feira, 27 de julho de 2022**
 
 Atualizações dos recursos já existentes na Adobe Experience Platform:
 
@@ -108,7 +108,7 @@ Para saber mais sobre [!DNL Data Prep], consulte o [[!DNL Data Prep] visão gera
 
 | Recurso | Descrição |
 | ----------- | ----------- |
-| [Exportar arquivo agora (Beta)](../../destinations/ui/export-file-now.md) | Exportar um arquivo completo sem interromper o agendamento de exportação atual de um segmento agendado anteriormente. Essa exportação ocorre além das exportações programadas anteriormente e não altera a frequência de exportação do segmento. <br> A exportação de arquivos é acionada imediatamente e obtém os resultados mais recentes das execuções de segmentação da Experience Platform. <br> <br>Entre em contato com o representante da Adobe para obter acesso a essa funcionalidade. |
+| [Exportar arquivo agora (Beta)](../../destinations/ui/export-file-now.md) | Exportar um arquivo completo sem interromper o agendamento de exportação atual de um segmento agendado anteriormente. Essa exportação ocorre além das exportações programadas anteriormente e não altera a frequência de exportação do segmento. <br> A exportação de arquivos é acionada imediatamente e obtém os resultados mais recentes das execuções de segmentação de Experience Platform. <br> <br>Entre em contato com o representante da Adobe para obter acesso a essa funcionalidade. |
 
 {style="table-layout:auto"}
 
@@ -148,13 +148,13 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 | Tipo de componente | Nome | Descrição |
 | --- | --- | --- |
 | Classe | [[!UICONTROL Clima]](https://github.com/adobe/xdm/blob/master/components/classes/weather.schema.json) | Uma classe baseada em registros usada para capturar dados meteorológicos. |
-| Grupo de campos | [[!UICONTROL Clima atual]](https://github.com/adobe/xdm/blob/master/components/classes/weather.schema.json) | Um grupo de campos para o [!UICONTROL XDM ExperienceEvent] e [!UICONTROL Clima] classes, usadas para capturar as condições meteorológicas atuais de um código postal. |
+| Grupo de campos | [[!UICONTROL Tempo atual]](https://github.com/adobe/xdm/blob/master/components/classes/weather.schema.json) | Um grupo de campos para o [!UICONTROL XDM ExperienceEvent] e [!UICONTROL Clima] classes, usadas para capturar as condições meteorológicas atuais de um código postal. |
 | Grupo de campos | [[!UICONTROL Previsão do tempo]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/forecasted-weather.schema.json) | Um grupo de campos para o [!UICONTROL XDM ExperienceEvent] e [!UICONTROL Clima] classes, usadas para capturar as condições meteorológicas previstas para um código postal. |
 | Grupo de campos | [[!UICONTROL Acionadores do produto]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/product-triggers.schema.json) | Um grupo de campos para o [!UICONTROL XDM ExperienceEvent] e [!UICONTROL Clima] classes, usadas para capturar acionadores específicos do produto que aproveitam as condições meteorológicas conhecidas por impulsionar o comportamento do consumidor. |
 | Grupo de campos | [[!UICONTROL Acionadores relativos]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/relative-triggers.schema.json) | Um grupo de campos para o [!UICONTROL XDM ExperienceEvent] e [!UICONTROL Clima] classes, usadas para capturar acionadores relativos que aproveitam as condições meteorológicas conhecidas por impulsionar o comportamento do consumidor. |
 | Grupo de campos | [[!UICONTROL Acionadores graves]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/severe-triggers.schema.json) | Um grupo de campos para o [!UICONTROL XDM ExperienceEvent] e [!UICONTROL Clima] classes, usadas para capturar acionadores que aproveitam as condições meteorológicas severas conhecidas por impulsionar o comportamento do consumidor. |
 | Grupo de campos | [[!UICONTROL Acionadores meteorológicos]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/weather-triggers.schema.json) | Um grupo de campos para o [!UICONTROL XDM ExperienceEvent] e [!UICONTROL Clima] classes, usadas para capturar acionadores gerais que aproveitam as condições meteorológicas conhecidas por impulsionar o comportamento do consumidor. |
-| Grupo de campos | [[!UICONTROL Detalhes de interação com a mídia]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/experienceevent-media.schema.json) | Um grupo de campos para o [!UICONTROL XDM ExperienceEvent] classe que captura detalhes sobre uma interação de mídia. |
+| Grupo de campos | [[!UICONTROL Detalhes de interação com a mídia]](https://github.com/adobe/xdm/blob/master/docs/reference/fieldgroups/experience-event/experienceevent-media.schema.json) | Um grupo de campos para o [!UICONTROL XDM ExperienceEvent] classe que captura detalhes sobre uma interação de mídia. |
 | Grupo de campos | [[!UICONTROL Detalhes de interação do MediaAnalytics]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/experienceevent-media-analytics.schema.json) | Um grupo de campos para o [!UICONTROL XDM ExperienceEvent] classe que captura detalhes sobre uma interação com relatórios de mídia. |
 | Tipo de dados | [[!UICONTROL Informações de detalhes de publicidade]](https://github.com/adobe/xdm/blob/master/components/datatypes/advertisingdetails.schema.json) | Registra detalhes sobre um ativo de publicidade. |
 | Tipo de dados | [[!UICONTROL Informações detalhadas do pod de publicidade]](https://github.com/adobe/xdm/blob/master/components/datatypes/advertisingpoddetails.schema.json) | Captura detalhes sobre um pod de publicidade, que é uma sequência de vários anúncios reproduzidos em um único ad break. |
@@ -177,7 +177,7 @@ Criada com base na Real-time Customer Data Platform (Real-Time CDP), a Real-Time
 | Recurso | Descrição |
 | --- | --- |
 | Correspondência de conta para lead | A correspondência entre lead e conta permite que você associe perfis de pessoas conhecidos a perfis de conta. Em seguida, você pode segmentar e direcionar dados em um contexto B2B, como contas ou oportunidades. Os trabalhos de execução diária usam fatores determinísticos e probabilísticos para corresponder perfis de pessoas que ainda não estão associados a nenhuma conta a uma conta com melhor correspondência. Em seguida, você pode decidir se inclui essas correspondências nas definições de segmento. <br><br>Para obter mais informações, consulte o documento sobre [lead para correspondência de conta](../../rtcdp/b2b-ai-ml-services/lead-to-account-matching.md). Para obter instruções sobre como configurar a correspondência entre lead e conta, consulte [Guia da interface do usuário do perfil da conta](../../rtcdp/account/../accounts/account-profile-ui-guide.md#configure-lead-to-account-matching).</li> |
-| Pontuação preditiva de conta e lead | A Pontuação preditiva de leads e contas usa um método de aprendizado de máquina baseado em árvore (aumento aleatório de floresta/gradiente) que envolve aprender e prever os eventos de conversão do estágio de oportunidade e agregar atividades de pessoa no nível da conta para produzir as pontuações da conta. Os principais fatores influentes também estão disponíveis no nível agregado e de unidade para ajudar os profissionais de marketing B2B a entender melhor quais elementos determinaram as pontuações. <br><br>Para obter mais informações, consulte o documento sobre [pontuação preditiva de lead e conta](../../rtcdp/b2b-ai-ml-services/predictive-lead-and-account-scoring.md). Para obter informações sobre como gerenciar pontuações, consulte o guia em [gerenciamento de pontuação preditiva de leads e contas no Real-time Customer Data Platform, B2B Edition.](../../rtcdp/b2b-ai-ml-services/manage-predictive-lead-and-account-scoring.md) |
+| Pontuação preditiva de leads e contas | A Pontuação preditiva de leads e contas usa um método de aprendizado de máquina baseado em árvore (aumento aleatório de floresta/gradiente) que envolve aprender e prever os eventos de conversão do estágio de oportunidade e agregar atividades de pessoa no nível da conta para produzir as pontuações da conta. Os principais fatores influentes também estão disponíveis no nível agregado e de unidade para ajudar os profissionais de marketing B2B a entender melhor quais elementos determinaram as pontuações. <br><br>Para obter mais informações, consulte o documento sobre [pontuação preditiva de lead e conta](../../rtcdp/b2b-ai-ml-services/predictive-lead-and-account-scoring.md). Para obter informações sobre como gerenciar pontuações, consulte o guia em [gerenciamento de pontuação preditiva de leads e contas no Real-time Customer Data Platform, B2B Edition.](../../rtcdp/b2b-ai-ml-services/manage-predictive-lead-and-account-scoring.md) |
 
 Para obter um guia sobre como monitorar o enriquecimento do perfil, consulte o documento sobre [monitoramento do enriquecimento do perfil na interface do usuário](../../dataflows/ui/b2b/monitor-profile-enrichment.md). Para saber mais sobre o Real-Time CDP B2B Edition, consulte a [Visão geral B2B do Real-Time CDP](../../rtcdp/overview.md).
 
