--- a/help/release-notes/2022/june-2022.md
+++ b/help/release-notes/2022/june-2022.md
@@ -2,16 +2,16 @@
 title: Notas de versão da Adobe Experience Platform de junho de 2022
 description: As notas de versão de junho de 2022 da Adobe Experience Platform.
 exl-id: 44f5ca11-f5c0-4e86-98b2-9564e3a5ca3d
-source-git-commit: 139d6a6632532b392fdf8d69c5c59d1fd779a6d1
+source-git-commit: d23f1cc9dd0155aceae78bf938d35463e9c38181
 workflow-type: tm+mt
-source-wordcount: '1846'
+source-wordcount: '1673'
 ht-degree: 25%
 
 ---
 
 # Notas de versão da Adobe Experience Platform
 
-**Data de lançamento: 22 de junho de 2022**
+**Data de lançamento: quinta-feira, 22 de junho de 2022**
 
 Atualizações dos recursos já existentes na Adobe Experience Platform:
 
@@ -74,7 +74,7 @@ A Adobe Experience Platform fornece um conjunto de tecnologias que permitem cole
 | [Renderizar apresentações](../../edge/personalization/rendering-personalization-content.md#applypropositions) em aplicativos de página única sem incremento de métricas. | Os novos `applyPropositions` permite renderizar ou executar uma matriz de propostas de [!DNL Target] em aplicativos de página única, sem incrementar o [!DNL Analytics] e [!DNL Target] métricas. Isso aumenta a precisão dos relatórios. |
 | [Compartilhamento de ID de dispositivo móvel para Web e entre domínios](../../edge/identity/id-sharing.md) | O SDK da Web da Adobe Experience Platform agora oferece suporte a recursos de compartilhamento de ID de visitante que permitem fornecer experiências personalizadas com mais precisão, entre aplicativos móveis e conteúdo da Web móvel e entre domínios. |
 | [Extensão de tag da Camada de dados do Google](../../tags/extensions/client/google-data-layer/overview.md) | A extensão Camada de dados da Google permite usar uma camada de dados da Google na implementação de tags. |
-| [Extensão de encaminhamento de eventos de Conversões aprimoradas do Google Ads](https://partners.adobe.com/br/exchangeprogram/experiencecloud/exchange.details.108630.html) | A extensão Conversões aprimoradas do Google Ads permite aprimorar as conversões do Google Ads em tempo real. |
+| [Extensão de encaminhamento de eventos de Conversões aprimoradas do Google Ads](https://partners.adobe.com/exchangeprogram/experiencecloud/exchange.details.108630.html) | A extensão Conversões aprimoradas do Google Ads permite aprimorar as conversões do Google Ads em tempo real. |
 | [Extensão de encaminhamento de eventos do Mailchimp](../../tags/extensions/server/mailchimp/overview.md) | A extensão de encaminhamento de eventos do Mailchimp envia eventos para a API de marketing do Mailchimp que podem acionar emails para campanhas de marketing, jornadas ou transações do Mailchimp. |
 
 Para obter mais informações, consulte [visão geral da coleção de dados](../../collection/home.md).
@@ -92,7 +92,7 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 | Classe | [[!UICONTROL Provedor]](https://github.com/adobe/xdm/blob/master/components/classes/provider.schema.json) | Uma classe do setor de saúde que captura detalhes sobre um provedor de serviços de saúde. |
 | Classe | [[!UICONTROL Pagador]](https://github.com/adobe/xdm/blob/master/components/classes/payer.schema.json) | Uma classe do setor de saúde que captura detalhes sobre uma empresa de seguros. |
 | Classe | [[!UICONTROL Programação de evento ao vivo]](https://github.com/adobe/xdm/blob/master/components/classes/live-event-schedule.schema.json) | Uma aula do setor esportivo e de entretenimento que captura detalhes sobre um cronograma de eventos ao vivo, como um cronograma de shows itinerantes ou cronograma de uma equipe esportiva. |
-| Classe | [[!UICONTROL Localização ]](https://github.com/adobe/xdm/blob/master/components/classes/location.schema.json) | Uma classe do setor de esportes e entretenimento que captura a localização de um evento ao vivo, como uma sala de concertos ou uma arena esportiva. |
+| Classe | [[!UICONTROL Localização]](https://github.com/adobe/xdm/blob/master/components/classes/location.schema.json) | Uma classe do setor de esportes e entretenimento que captura a localização de um evento ao vivo, como uma sala de concertos ou uma arena esportiva. |
 | Grupo de campos | [[!UICONTROL Medicação para tratamento de saúde]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/medication/healthcare-medication.schema.json) | Um grupo de campos para o [!UICONTROL Medicação] classe que captura detalhes sobre o medicamento, como nome da marca, número de lote e quantidade. |
 | Grupo de campos | [[!UICONTROL Detalhes do plano de saúde]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/plan/healthcare-plan-details.schema.json) | Um grupo de campos para o [!UICONTROL Plano] classe que captura detalhes como rede, tipo e status ativo. |
 | Grupo de campos | [[!UICONTROL Provedor de assistência médica]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/provider/healthcare-provider-details.schema.json) | Um grupo de campos para o [!UICONTROL Provedor] classe que captura detalhes de um profissional de saúde individual ou de uma organização de unidade de saúde licenciada para fornecer serviços de diagnóstico e tratamento de saúde. |
@@ -111,7 +111,7 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 | --- | --- | --- |
 | Comportamento | [[!UICONTROL Esquema de série temporal]](https://github.com/adobe/xdm/blob/master/components/behaviors/time-series.schema.json) | Adição de um tipo de evento de atualização de estados de mídia. |
 | Grupo de campos | [[!UICONTROL Reserva de acomodação]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/industry-verticals/experienceevent-lodging-reservation.schema.json) | Adição de uma propriedade de check-out de hospedagem. |
-| Tipo de dados | [[!UICONTROL Informações de mídia]](https://github.com/adobe/xdm/blob/master/components/datatypes/media.schema.json) | Adição de campos de início de estados e término de estados. |
+| Tipo de dados | [[!UICONTROL Informações de mídia]](https://github.com/adobe/xdm/blob/master/docs/reference/datatypes/media.schema.json) | Adição de campos de início de estados e término de estados. |
 | Extensão | [[!UICONTROL Evento de alteração do Workfront]](https://github.com/adobe/xdm/blob/master/extensions/adobe/experience/workfront/changeevent.schema.json) | Foram adicionados dois campos usados para armazenar atributos para ajudar a identificar o usuário e a hora de um evento de criação. |
 | Extensão | [[!UICONTROL Adobe CJM ExperienceEvent - Detalhes de interação da mensagem]](https://github.com/adobe/xdm/blob/master/extensions/adobe/experience/customerJourneyManagement/message-interaction.schema.json) | Inclusão de assinatura, consentimento, email personalizado e informações de dados adicionais no objeto da página de aterrissagem. |
 
