--- a/help/release-notes/2022/may-2022.md
+++ b/help/release-notes/2022/may-2022.md
@@ -2,16 +2,16 @@
 title: Notas da versão de maio de 2022 da Adobe Experience Platform
 description: As notas de versão de maio de 2022 da Adobe Experience Platform.
 exl-id: bcde04aa-7858-437c-a692-2841124006a5
-source-git-commit: 3d0f2823dcf63f25c3136230af453118c83cdc7e
+source-git-commit: d23f1cc9dd0155aceae78bf938d35463e9c38181
 workflow-type: tm+mt
-source-wordcount: '2358'
-ht-degree: 20%
+source-wordcount: '2265'
+ht-degree: 17%
 
 ---
 
 # Notas de versão da Adobe Experience Platform
 
-**Data de lançamento: 25 de maio de 2022**
+**Data de lançamento: quinta-feira, 25 de maio de 2022**
 
 Novos recursos na Adobe Experience Platform:
 
@@ -44,7 +44,7 @@ Por meio do controle de acesso baseado em atributos, os administradores da sua o
 | Recurso | Descrição |
 | --- | --- |
 | Controle de acesso baseado em atributos | O controle de acesso baseado em atributos permite rotular campos de esquema do Experience Data Model (XDM) com rótulos que definem escopos organizacionais ou de uso de dados. Em paralelo, os administradores podem usar a interface de administração de usuários e funções para definir políticas de acesso que cubram campos de esquema XDM e gerenciar melhor o acesso fornecido aos usuários ou grupos de usuários (usuários internos, externos ou de terceiros). Além disso, o controle de acesso baseado em atributos permite que os administradores gerenciem o acesso a segmentos específicos. Para obter mais informações, consulte [visão geral do controle de acesso baseado em atributos](../../access-control/abac/overview.md). |
-| Permissões | Permissões é a área do Experience Cloud em que os administradores podem definir funções de usuário e políticas de acesso para gerenciar permissões de acesso para recursos e objetos em um aplicativo de produto. Através das permissões da , , é possível criar e gerenciar funções, bem como atribuir as permissões de recurso desejadas para essas funções. As permissões também permitem gerenciar rótulos, sandboxes e usuários associados a uma função específica. Para obter mais informações, consulte [Guia de permissões da interface do usuário](../../access-control/abac/ui/browse.md). |
+| Permissões | Permissões é a área do Experience Cloud em que os administradores podem definir funções de usuário e políticas de acesso para gerenciar permissões de acesso para recursos e objetos em um aplicativo de produto. Através das Permissões, é possível criar e gerenciar funções, bem como atribuir as permissões de recurso desejadas para essas funções. As permissões também permitem gerenciar rótulos, sandboxes e usuários associados a uma função específica. Para obter mais informações, consulte [Guia de permissões da interface do usuário](../../access-control/abac/ui/browse.md). |
 
 Para obter mais informações sobre o controle de acesso baseado em atributos, consulte [visão geral do controle de acesso baseado em atributos](../../access-control/abac/overview.md).
 
@@ -141,7 +141,7 @@ Para obter mais informações sobre segmentos, consulte [documentação do paine
 
 ## Coleção de dados {#data-collection}
 
-A Experience Platform fornece um conjunto de tecnologias que permitem coletar dados da experiência do cliente e enviá-los à Rede de borda da Adobe Experience Platform, onde eles podem ser enriquecidos, transformados e distribuídos para destinos da Adobe ou de outras empresas.
+O Experience Platform fornece um conjunto de tecnologias que permitem coletar dados de experiência do cliente do lado do cliente e enviá-los para a Rede de borda da Adobe Experience Platform, onde eles podem ser enriquecidos, transformados e distribuídos para destinos Adobe ou não Adobe.
 
 **Novos recursos**
 
@@ -220,7 +220,7 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 | Grupo de campos | [[!UICONTROL Status do registro]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/record-status.schema.json) | Status do grupo de campos atualizado de `experimental` para `stable`. |
 | Grupo de campos | (Vários) | Vários grupos de campos B2B foram atualizados para que determinados campos de ID sejam descontinuados em favor dos campos do tipo chave que usam o [[!UICONTROL Origem B2B]](../../xdm/data-types/b2b-source.md) tipo de dados. Os campos de ID anteriores serão descontinuados em uma atualização futura. Consulte o seguinte [pull request](https://github.com/adobe/xdm/pull/1533/files#diff-720c0bb1d1cbaf622f5656c2a4b62d35830c75f6563794da72a280a6a520fbc1) para obter uma lista completa das alterações feitas nos grupos de campos afetados. |
 | Tipo de dados | [[!UICONTROL Detalhes do navegador]](https://github.com/liljenback/xdm/blob/master/components/datatypes/browserdetails.schema.json) | Adição de um novo campo `xdm:userAgentClientHints` que captura informações contextuais sobre o agente do usuário que interage com o navegador. |
-| Tipo de dados | [[!UICONTROL Informações de mídia]](https://github.com/lidiaist/xdm/blob/master/components/datatypes/media.schema.json) | Adição de um `xdm:playhead` para capturar o tempo do indicador de reprodução de um conteúdo de mídia. Validação de padrão fixo para `xdm:videoSegment`. |
+| Tipo de dados | [[!UICONTROL Informações de mídia]](https://github.com/lidiaist/xdm/blob/master/docs/reference/datatypes/media.schema.json) | Adição de um `xdm:playhead` para capturar o tempo do indicador de reprodução de um conteúdo de mídia. Validação de padrão fixo para `xdm:videoSegment`. |
 | Tipo de dados | [[!UICONTROL Classificação]](https://github.com/lidiaist/xdm/blob/master/components/datatypes/external/iptc/rating.schema.json) | `iptc4xmpExt:RatingSourceLink` não é mais um campo obrigatório. |
 
 {style="table-layout:auto"}
