Updated by task 'AUTO_TM_MT_1709938191471'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/800a576ea658fe2eb4fdc83251bcf4de31012072

--- a/help/release-notes/2023/june-2023.md
+++ b/help/release-notes/2023/june-2023.md
@@ -2,9 +2,9 @@
 title: Notas de versão da Adobe Experience Platform
 description: As notas de versão de junho de 2023 da Adobe Experience Platform.
 exl-id: 8a2bf2c0-e469-42f5-b324-6acba83d5ec3
-source-git-commit: 1e9d6b0c43461902c5b966aa1d0576103e872e0c
+source-git-commit: 8896ffb78ae01bfe6d7974d781acea104a6356a9
 workflow-type: tm+mt
-source-wordcount: '1538'
+source-wordcount: '1418'
 ht-degree: 99%
 
 ---
@@ -39,12 +39,13 @@ A Adobe Experience Platform fornece um conjunto de tecnologias que permitem cole
 | Tipo | Recurso | Descrição |
 | --- | --- | --- |
 | Extensão | Extensão de encaminhamento de eventos da [!DNL Google Cloud Platform] | A extensão de encaminhamento de eventos da [[!DNL Google Cloud Platform]](../../tags/extensions/server/google-cloud-platform/overview.md) permite encaminhar dados de eventos para o Google para ativação via [!DNL Google Pub/Sub]. |
-| Extensão | [!DNL Cloud connector for Google Analytics 4 (ga4)] extensão | A extensão de encaminhamento de eventos do [[!DNL Cloud connector for Google Analytics 4 (ga4)]](https://partners.adobe.com/br/exchangeprogram/experiencecloud/exchange.details.109820.html) permite acompanhar a análise por meio do novo padrão [!DNL Google Analytics 4 (ga4)]. |
 | Segredo | Segredo JWT do OAuth 2 | O [Segredo JWT do OAuth 2](../../tags/ui/event-forwarding/secrets.md) permite usar tokens de serviço da Adobe e do [!DNL Google] para oferecer suporte a interações de servidor-servidor no encaminhamento de eventos. |
 
 {style="table-layout:auto"}
 
 Para saber mais sobre coleção de dados, leia a [visão geral da coleção de dados](../../tags/home.md).
+
+<!-- | Extension | [!DNL Cloud connector for Google Analytics 4 (ga4)] extension | The [[!DNL Cloud connector for Google Analytics 4 (ga4)]](https://partners.adobe.com/exchangeprogram/experiencecloud/exchange.details.109820.html) event forwarding extension allows you to track analytics via the new [!DNL Google Analytics 4 (ga4)] standard. | -->
 
 ## Destinos {#destinations}
 
@@ -56,7 +57,7 @@ Para saber mais sobre coleção de dados, leia a [visão geral da coleção de d
 | ----------- | ----------- |
 | [[!BADGE Beta]{type=Informative} [!DNL Amazon Ads] conexão](../../destinations/catalog/advertising/amazon-ads.md) | A integração do [!DNL Amazon Ads] com a Adobe Experience Platform agora é compatível com o roteamento regional a vários marketplaces do [!DNL Amazon Ads]. Leia mais no [changelog de destino](../../destinations/catalog/advertising/amazon-ads.md#changelog). |
 
-{style="layout de tabela:automático"}
+{style="table-layout:auto"}
 
 **Funcionalidades novas ou atualizadas** {#destinations-new-updated-functionality}
 
@@ -84,7 +85,7 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 
 | Tipo de componente | Nome | Descrição |
 | --- | --- | --- |
-| Extensão (Perfil em potencial) | [[!UICONTROL Extensão de união de perfil em potencial do Serviço de perfil unificado da Adobe]](https://github.com/adobe/xdm/pull/1735/files) | Campos obrigatórios adicionados para o esquema de união de perfil em potencial. |
+| Extensão (Prospecto-Perfil) | [[!UICONTROL Extensão de união de perfil em potencial do Serviço de perfil unificado da Adobe]](https://github.com/adobe/xdm/pull/1735/files) | Campos obrigatórios adicionados para o esquema de união de perfil em potencial. |
 | Extensão | [[!UICONTROL Ativo de decisão]](https://github.com/adobe/xdm/pull/1732/files) | Adicione um tipo de dados para representar ativos usados na decisão. O [!UICONTROL Ativo de decisão] fornece uma referência aos ativos usados para renderizar os `decisionItems`. |
 | Tipo de dados | [[!UICONTROL Comércio]](https://github.com/adobe/xdm/pull/1747/files) | O [!UICONTROL Comércio] armazena registros relacionados à atividade de compra e venda. |
 | Grupo de campos | [[!UICONTROL Enriquecimento do parceiro de perfil (amostra)]](https://github.com/adobe/xdm/pull/1747/files) | Um esquema de amostra foi adicionado para o enriquecimento do parceiro de perfil. |
@@ -142,7 +143,7 @@ A Experience Platform fornece uma API RESTful e uma interface interativa que per
 | --- | --- |
 | Suporte à exclusão de fluxos de dados de origem de classificação do Adobe Analytics | Agora é possível excluir fluxos de dados de origem que usam classificações do Adobe Analytics como sua origem. Em **[!UICONTROL Origens]** > **[!UICONTROL Fluxos de dados]**, selecione o fluxo de dados desejado e clique em excluir. Para obter mais informações, leia o manual sobre a [criação de uma conexão de origem para dados de classificações do Adobe Analytics](../../sources/tutorials/ui/create/adobe-applications/classifications.md). |
 | Suporte à filtragem para o [!DNL Microsoft Dynamics] usando a API | Use operadores lógicos e de comparação para filtrar dados no nível da linha para a origem do [[!DNL Microsoft Dynamics]](../../sources/connectors/crm/ms-dynamics.md). Para obter mais informações, leia o manual sobre a [filtragem de dados de uma origem usando a API](../../sources/tutorials/api/filter.md). |
-| [!BADGE Beta]{type=Informative}[!DNL RainFocus] | Agora é possível usar a integração de origens do [!DNL RainFocus] para trazer dados de análise e gerenciamento de eventos da sua conta do [!DNL RainFocus] para a Experience Platform. Para obter mais informações, leia a [[!DNL RainFocus] visão geral de origem](../../sources/connectors/analytics/rainfocus.md). |
+| [!BADGE Beta]{type=Informative} Suporte para [!DNL RainFocus] | Agora é possível usar a integração de origens do [!DNL RainFocus] para trazer dados de análise e gerenciamento de eventos da sua conta do [!DNL RainFocus] para a Experience Platform. Para obter mais informações, leia a [[!DNL RainFocus] visão geral de origem](../../sources/connectors/analytics/rainfocus.md). |
 | Compatibilidade com o Adobe Commerce | Agora você pode usar a integração de origens do Adobe Commerce para trazer dados da sua conta do Adobe Commerce para a Experience Platform. Para obter mais informações, leia a [Visão geral de origem do Adobe Commerce](../../sources/connectors/adobe-applications/commerce.md). |
 | Compatibilidade com o [!DNL Mixpanel] | Agora é possível usar a integração de origens do [!DNL Mixpanel] para trazer dados de análise da sua conta do [!DNL Mixpanel] para a Experience Platform usando APIs ou a interface. Para obter mais informações, leia a [[!DNL Mixpanel] visão geral de origem](../../sources/connectors/analytics/mixpanel.md). |
 | Compatibilidade com o [!DNL Zendesk] | Agora você pode usar a integração de origens do [!DNL Zendesk] para trazer os dados de sucesso do cliente da sua conta do [!DNL Zendesk] para a Experience Platform usando APIs ou a interface. Para obter mais informações, leia a [[!DNL Zendesk] visão geral de origem](../../sources/connectors/customer-success/zendesk.md). |
